Changelog for innotop:

   Changes:
   * Don't re-fetch SHOW VARIABLES every iteration; it's too slow on many hosts.
   * Add a filter to remove EVENT threads in SHOW PROCESSLIST (issue 32).

   Bugs fixed:
   * Hostname parsing wasn't standards compliant (issue 30).
   * MKDEBUG didn't work on some Perl versions (issue 22).
   * Don't try to get InnoDB status if have_innodb != YES (issue 33).

2009-09-06: version 1.7.2

   Changes:
   * add support for --socket

   Bugs fixed:
   * remove cxn from $meta->{group_by} if there's only one connection displayed
   * fix for issue 19 - cxn column won't become visible when viewing two 
     connections after having viewed one connection
   * supress errors resulting from the addition of a 'BACKGROUND THREAD' 
     section in the output of 'show innodb status' 
   * possible fix for issue 22 - Useless use of a constant in void context
   * small change to set_to_tbl() around hiding the cxn column if there 
     aren't two or more connections

2009-03-09: version 1.7.1

   Changes:
   * Don't display the CXN column if only one connection is active in 
     the current view
   * the 'state' column is now visible by default in Query List mode

   Bugs fixed:
   * fixed bug where trying to aggregate the time column would result 
     in a crash if the time column had an undef value in it, which is 
     the case when a thread is in the 'Connect' state
   * updated innotop.spec file to reflect current version

2009-02-23: version 1.7.0

   Changes:
   * supports a central config (/etc/innotop/innotop.conf)
   * changed the default home directory config to ~/.innotop/innotop.conf
     (away from .ini)
   * embedded InnoDBParser.pm into innotop so it can be run with no 
     installation
   * no longer writes a new config file by default
   * added --skipcentral (skip reading central config) and --write (write
     a config if none were loaded at start-up)
   * if no config file is loaded, connect to a MySQL database on